--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "api-chat-fanpage-facebook",
-  "version": "1.1.1",
+  "version": "1.1.1-a",
   "description": "",
   "main": "index.js",
   "dependencies": {
