--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "api-chat-fanpage-facebook",
-  "version": "1.1.1-a",
+  "version": "1.1.2",
   "description": "",
   "main": "index.js",
   "dependencies": {
     "api-chatfb": "^1.0.0",
-    "@scdb/simple-http": "^1.0.2"
+    "@scdb/simple-http": "^1.0.4"
   },
   "devDependencies": {},
   "scripts": {
@@ -13,7 +13,7 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/OraliePham/api-chatfb.git"
