--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "api-chat-fanpage-facebook",
-  "version": "1.1.4",
+  "name": "@oraliepham/api-chat-fanpage-facebook",
+  "version": "1.1.5",
   "description": "Connect to Facebook fanpage",
   "main": "index.js",
   "dependencies": {
-    "api-chatfb": "^1.0.2",
-    "@scdb/simple-http": "^1.0.4"
+    "@scdb/simple-http": "^1.0.4",
+    "@utilcode/simple-http": "^1.0.0",
+    "api-chatfb": "^1.0.1"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -22,5 +22,8 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/OraliePham/api-chatfb.git"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
   }
 }
